--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "test": "jsonlint src/grammar.json"
+    "test": "jsonlint -q src/grammar.json"
   },
   "repository": {
     "type": "git",
