--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "npm run print",
     "test": "npm run lint && npm run print",
     "print": "node src/index.js ",
-    "lint": "jsonlint -q src/data/grammar.json"
+    "lint": "jsonlint -q src/data/grammar.json",
+    "watch": "gulp"
   },
   "repository": {
     "type": "git",
@@ -23,7 +24,12 @@
     "url": "https://github.com/mdiehr/mtgnewsbot/issues"
   },
   "homepage": "https://github.com/mdiehr/mtgnewsbot#readme",
-  "devDependencies": {},
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-debug": "^3.1.0",
+    "gulp-jsonlint": "^1.2.0",
+    "gulp-util": "3.0.8"   
+  },
   "dependencies": {
     "lodash.merge": "4.6.0",
     "tracery-grammar": "2.7.3",
