--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "gulp-debug": "^3.1.0",
     "gulp-eslint": "^4.0.0",
     "gulp-jsonlint": "^1.2.0",
-    "gulp-util": "3.0.8"
+    "gulp-util": "3.0.8",
+    "run-sequence": "^2.0.0"
   },
   "eslintConfig": {
     "extends": "eslint:recommended",
