--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "src/news-engine.js",
   "scripts": {
     "start": "npm run print",
-    "test": "npm run lint && npm run print",
+    "test": "gulp lint && npm run print",
     "print": "node src/index.js ",
     "lint": "gulp lint",
     "watch": "gulp"
