--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "dependencies": {
     "lodash.merge": "4.6.0",
     "tracery-grammar": "2.7.3",
-    "twit": "2.2.9"
+    "twit": "2.2.9",
+    "svg2png": "4.1.1"
   },
   "devDependencies": {
     "eslint": "^4.2.0",
