Add grammar merging script
This isn't hooked into the pipeline yet, but you can run it with:

$ npm run build-grammar
  or
$ node build.js

--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   "scripts": {
     "start": "npm run print",
     "print": "node src/index.js ",
-    "lint": "gulp lint",        
+    "lint": "gulp lint",
     "test": "gulp lint && npm run print",
-    "watch": "gulp"
+    "watch": "gulp",
+    "build-grammar": "node build.js"
   },
   "repository": {
     "type": "git",
