--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
   "homepage": "https://github.com/mdiehr/mtgnewsbot#readme",
   "dependencies": {
     "lodash.merge": "4.6.0",
+    "svg2png": "4.1.1",
     "tracery-grammar": "2.7.3",
-    "twit": "2.2.9",
-    "svg2png": "4.1.1"
+    "twit": "2.2.9"
   },
   "devDependencies": {
     "eslint": "^4.2.0",
