--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
   },
   "homepage": "https://github.com/mdiehr/mtgnewsbot#readme",
   "dependencies": {
-    "html2png": "1.1.2",
     "jimp": "0.2.28",
     "lodash.merge": "4.6.0",
     "svg2png": "4.1.1",
     "tracery-grammar": "2.7.3",
-    "twit": "2.2.9"
+    "twit": "2.2.9",
+    "webshot": "^0.18.0"
   },
   "devDependencies": {
     "eslint": "^4.2.0",
