--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "jimp": "0.2.28",
     "lodash.merge": "4.6.0",
+    "request": "2.81.0",
     "svg2png": "4.1.1",
     "tracery-grammar": "2.7.3",
     "twit": "2.2.9",
