--- a/package.json
+++ b/package.json
@@ -5,27 +5,14 @@
   "author": "Mark Diehr <mdiehr@gmail.com> (https://www.goodgamery.com)",
   "main": "src/news-engine.js",
   "scripts": {
-    "start": "npm run print",
-    "print": "node src/index.js ",
+    "start": "node mtgnews",
+    "print": "node mtgnews",
     "lint": "gulp lint",
-    "test": "gulp lint && npm run print 15",
-    "watch": "gulp",
-    "build-grammar": "node build.js"
+    "test": "gulp lint && node mtgnews -c 15",
+    "watch": "gulp"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mdiehr/mtgnewsbot.git"
-  },
-  "keywords": [
-    "Robot",
-    "Twitter"
-  ],
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/mdiehr/mtgnewsbot/issues"
-  },
-  "homepage": "https://github.com/mdiehr/mtgnewsbot#readme",
   "dependencies": {
+    "commander": "2.11.0",
     "jimp": "0.2.28",
     "lodash.merge": "4.6.0",
     "request": "2.81.0",
@@ -43,6 +30,19 @@
     "gulp-util": "3.0.8",
     "run-sequence": "^2.0.0"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mdiehr/mtgnewsbot.git"
+  },
+  "keywords": [
+    "Robot",
+    "Twitter"
+  ],
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/mdiehr/mtgnewsbot/issues"
+  },
+  "homepage": "https://github.com/mdiehr/mtgnewsbot#readme",
   "eslintConfig": {
     "extends": "eslint:recommended",
     "parserOptions": {
