--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "commander": "2.11.0",
     "fs-extra": "4.0.1",
     "jimp": "0.2.28",
+    "js-yaml": "3.9.1",
     "lodash.merge": "4.6.0",
     "request": "2.81.0",
     "svg2png": "4.1.1",
