--- a/src/data/grammar/mtg-decks.yaml
+++ b/src/data/grammar/mtg-decks.yaml
@@ -2,6 +2,16 @@
   "deckArch": [
       "#deck#",
       "#deckVariation#",
+      "#creatureTypes.capitalize# Tribal",
+      "#format# #creatureTypesPlural.capitalize#",
+      "#format# #deck#",
+      "#format# #deckVariation#",
+      "#colors.capitalize# #deck#",
+      "[_deck:#deckArch#,#preconDeck#]#_deck#"
+  ],
+  "deckArchOrCategory": [
+      "#deck#",
+      "#deckVariation#",
       "decks with #card#",
       "#creatureTypes.capitalize# Tribal",
       "#format# #creatureTypesPlural.capitalize#",
