--- a/src/data/grammar/mtg-decks.yaml
+++ b/src/data/grammar/mtg-decks.yaml
@@ -3,9 +3,9 @@
       "#deck#",
       "#deckVariation#",
       "#creatureTypes.capitalize# Tribal",
-      "#format# #creatureTypesPlural.capitalize#",
-      "#format# #deck#",
-      "#format# #deckVariation#",
+      "[_format:#format#]#_format# #creatureTypesPlural.capitalize#",
+      "[_format:#format#]#_format# #deck#",
+      "[_format:#format#]#_format# #deckVariation#",
       "#colors.capitalize# #deck#",
       "[_deck:#deckArch#,#preconDeck#]#_deck#"
   ],
@@ -14,9 +14,9 @@
       "#deckVariation#",
       "decks with #card#",
       "#creatureTypes.capitalize# Tribal",
-      "#format# #creatureTypesPlural.capitalize#",
-      "#format# #deck#",
-      "#format# #deckVariation#",
+      "[_format:#format#]#_format# #creatureTypesPlural.capitalize#",
+      "[_format:#format#]#_format# #deck#",
+      "[_format:#format#]#_format# #deckVariation#",
       "#colors.capitalize# #deck#",
       "[_deck:#deckArch#,#preconDeck#]#_deck#"
   ],
