fix colors and word wrapping

--- a/src/data/grammar/grammar.yaml
+++ b/src/data/grammar/grammar.yaml
@@ -17,7 +17,8 @@
         "#headlineKeepOrMulligan#",
       	"#gathererRulingImage#",
         "#inGraphics#",
-        "#mtgComic#"
+        "#mtgComic#",
+        "#mtgDeckTechGraphic#"
     ],
     "disabledHeadline": [],
     "testSvg": "#headlineKeepOrMulligan#",
