--- a/src/data/grammar/mtg-deck-tech.yaml
+++ b/src/data/grammar/mtg-deck-tech.yaml
@@ -1,6 +1,10 @@
 ---
 mtgDeckTechGraphic: >
-  [_format:#format#]#decktech# {svg svgString="#svgDeckTechImage#"} 
+  [_format:#format#][_textDeckName:#deckArch#]#svgDeckTechStatusText# {svg svgString="#svgDeckTechImage#"} 
+
+svgDeckTechStatusText:
+- "DECK TECH: #_textDeckName#"
+# - "DECK TECH: #_format# #dynamicDayOfWeek#"
 
 svgDeckTechBackgroundImageUrl: 
   - ../src/data/images/decktech/backgrounds/agent-of-erebos.jpg
@@ -16,8 +20,8 @@ svgDeckTechAccessoriesImageUrl:
 
 svgDeckTechTitle: "DECK TECH[_textSubtitle:with #pro#]"
 svgDeckDeckName:
-  - "[_featuredCard:#realHandCard#][_deckName:#deckArch#]"
-  - "[_featuredCard:#realHandCard#][_deckName:#deckArch# with #_featuredCard#]"
+  - "[_featuredCard:#realHandCard#][_deckName:#_textDeckName#]"
+  - "[_featuredCard:#realHandCard#][_deckName:#_textDeckName# with #_featuredCard#]"
 
 svgDeckTechTemplateWidth: "1024"
 svgDeckTechTemplateHeight: "560"
@@ -26,7 +30,7 @@ svgDeckTechAccessoriesImageHeight: "259"
 svgDeckTechAccessoriesImageXPos: "0"
 svgDeckTechAccessoriesImageYPos: "301"
 
-svgDeckTechTemplate: "[svgDeckTechTemplateWidth:1024][svgDeckTechTemplateHeight:560][_textTitle:#svgDeckTechTitle#][_textDeckName:#deckArch#]"
+svgDeckTechTemplate: "[svgDeckTechTemplateWidth:1024][svgDeckTechTemplateHeight:560][_textTitle:#svgDeckTechTitle#]"
 svgDeckTechTemplateTitleStyle: "font-size: 64px; font-family:  Verdana, Sans Serif; font-weight: bolder; letter-spacing: -0.01em; stroke-width:2; fill: white;"
 svgDeckTechTemplateSubtitleStyle: "font-size: 48px; font-family:  Verdana, 'Sans Serif'; font-weight: bolder; letter-spacing:  -0.01em; stroke: rgb(144,16,16); stroke-width:2; fill: white;"
 svgDeckTechTemplateDeckNameStyle: "font-size: 50px; font-family:  Verdana; font-weight: bold; line-height: 1.1em; -webkit-text-stroke-width:4px; -webkit-text-stroke-color: rgb(10,20,20);"
