--- a/src/data/grammar/mtg-cards.yaml
+++ b/src/data/grammar/mtg-cards.yaml
@@ -248,7 +248,7 @@
       "Pithing Needle",
       "Ponder",
       "Primal Command",
-      "Primeval Tian",
+      "Primeval Titan",
       "Prophetic Bolt",
       "Psychatog",
       "Qasali Pridemage",
