--- a/src/data/grammar/mtg-cards.yaml
+++ b/src/data/grammar/mtg-cards.yaml
@@ -1,5 +1,7 @@
 {
-  "imgCard": "{imgCard cardName=\"#_cardname#\"}",
+  "imgCard": "{htmlImg htmlImgString=\"<img src=`#cardFinderUrl##_cardname#`>\"}",
+  "cardFinderUrl": "https://goodgamery.com/api/mtg/image?card=",
+
   "card": [
       "#cardAlone#",
       "#cardAlone#",
