fix the headline tag

--- a/src/data/grammar/grammar.yaml
+++ b/src/data/grammar/grammar.yaml
@@ -19,7 +19,7 @@
         "#inGraphics#",
         "#mtgComic#",
         "#mtgDeckTechGraphic#",
-        "cardCallout"
+        "#cardCallout#"
     ],
     "disabledHeadline": [],
     "testSvg": "#headlineKeepOrMulligan#",
