--- a/src/data/grammar/mtg-set-logo.yaml
+++ b/src/data/grammar/mtg-set-logo.yaml
@@ -88,7 +88,7 @@ _setLogoTextStyles:
 mtgSetLogoImage: |
   [#_setLogoFont#]
   <div style="display:table;">
-    <div style="height:340px; width:680px; display:table-cell; text-align: center; align:center; padding:20px; margin: 0 auto; vertical-align: middle; background-color: black;">
+    <div style="height:180px; width:680px; display:table-cell; text-align: center; align:center; padding:20px; margin: 0 auto; vertical-align: middle;">
         <span style="border-radius: 10px; #_setLogoStyles# #_setLogoTextStyles#">#_cardsetDebug#</span>
     </div>
   </div>
